# RustAxumAPI

./: .gitignore  README.md  client.http  docker-compose.yml
api/: .env-example  Cargo.toml
api/migrations/: 20230923005301_todo.sql
api/src/: handler.rs  main.rs  route.rs  schema.rs
api/src/configs/: database.rs
api/src/handler/: todo_handler.rs
api/src/model/: todo_model.rs
api/src/repository/: todo_repository.rs
api/src/schema/: mod.rs
api/src/service/: todo_service.rs
